css/screen.css
/* Navigation Bar*/
nav {
  position: absolute;
  text-align: center;
  overflow: hidden;
  background-color: #6495ED;
  top: 0;
  width: 100%;
}

nav li {
    float: none;
    display: inline-block;
    text-align: center;
    padding: 14px 16px;
}

nav li:hover {
  background-color: #005BFF;
}

#nav-active {
    background-color: #005bff;
}

nav a {
    color: white;
    font-size: 20px;
    text-decoration: none;
}

/*Index page*/
.logo {
  position: absolute;
  overflow: hidden;
  top: 48px;
  left: 200px;
}

.title {
  font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
  position: absolute;
  float: left;
  top: 145px;
  left: 480px;
  font-size: 50px;
  color: #6495ED;
  max-width: 100%;
}

video {
  position: absolute;
  float: left;
  top: 400px;
  left: 100px;
}

.quote p {
  position: absolute;
  float: left;
  font-family: 'Montserrat';
  font-size: 25px;
  top: 400px;
  left: 800px;
  padding: 18px;
}
.argument p {
  position: absolute;
  font-size: 25px;
  top: 555px;
  left: 800px;
}

.join-us p {
  position: absolute;
  font-size: 25px;
  top: 650px;
  left: 1000px;
}

.join-us a {
  background-color: #6495ED;
  padding: 10px 5px;
  text-decoration: none;
  border: 3px solid black;
}

.join-us a:hover {
  background-color: #005BFF;
  border: 3px solid black;
}

/* End of CSS for index page */

#header{
  margin-top: 50px;
  background-color: #6495ED; 
  font-size: 64px;
  font-weight: bold;
  color: white;
  font-family: 'Abril Fatface', cursive;
  padding: 5px 0;
}

/*CSS for the Second Page*/

/*CSS for the Pictures*/
#photos{
  margin: 20px 0;
}
#photos img{
  height: 100px;
  width: 100px;
  border-radius: 50%;
  margin-right: 10px;
  margin-top: 25px;
}
/*CSS for the paragraph and headers*/
html{
  text-align: center;
}
#title{
  margin-top: 32px;
  font-size: 30px;
  font-family: 'Satisfy', cursive;
}

.information{
  font-size: 12px;
  margin: 2%;
  font-family: 'Barlow', sans-serif;
  padding-bottom: 2%;
}

/*CSS for the Buttons and tab content*/
.tabs{
  background-color: #6495ED;
  color: white;
  width: 90%;
  border: 5px solid black;
  font-weight: bold;
  transition: .1s;
  font-size: 24px;
  font-family: 'Barlow', sans-serif;
}
.tabs h3{
  font-size: 24px;
  font-family: 'Abril Fatface', cursive;
}
.active, .tab:hover {
  background-color: #005BFF;
}
.tabcontent{
  padding: 20px 0;
  display: none;
  overflow: hidden;
  text-align: left;
  margin: 15px 5%;
  font-size: 10px;
}
.tabcontent h4{
  font-size: 20px;
  margin-bottom: 10px;
  font-weight: bold;
}
.tabcontent p{
  margin-bottom: 10px;
}
.tabcontent ol{
  list-style: inside;
  list-style-type: upper-roman;
}
.tabcontent li{
  margin-bottom: 10px;
}
.tabcontent h5{
  margin-bottom: 10px;
  font-weight: bold;
}
#tab2 h4{
  font-style: italic;
  text-align: center;
}
#tab3 img{
  float: left;
  margin-left: 15%;
  height: 150px;
  width: auto;
}
#tab3 p{
  margin: 10px 10%;
  font-size: 12px;
  width: auto;
  text-align: center;
}
.underline{
  text-decoration: underline;
}

/* CSS for Join Us Page */
.content {
  font-size: 25px;
  font-weight: bold;
  margin-top: 3%;
  line-height: 40px;
}
#fullcontain{
  margin-top: 3%;
}
/*Vertical line*/
.divline{
  visibility: hidden;
  border-left: 4px solid black;
  height: 340px;
  left: 56%;
  margin-top: 19px;
  position: absolute;
}
/* -->Form Page: Form */
#full_form{
  width: 90%;
  font-size: 20px;
  text-align: center;
  letter-spacing: 2px;
  padding-bottom: 30px;
}
#firstname{
  margin-top: 8px;
  margin-bottom: 10px;
}
#lastname{
  margin-top: 8px;
  margin-bottom: 10px;
}
#emailid{
  margin-top: 8px;
  margin-bottom: 1px;
}
fieldset{
  border: 0px solid #fff;
}
input[type=text], input[type=email]{
  border: 3px solid;
  background-color: #6495EDB8;
  border-radius: 4px;
  border-color: #6495EDB8;
  padding: 15px;
  width: 100%;
  font-size: 20px;
}
input[type=text]:focus {
  border: 1px solid;
}
input[type=submit] {
  background-color: #6495ED;
  color: white;
  border-radius: 4px;
  border: none;
  padding: 15px;
  margin: 8px;
  margin-left: 5%;
  margin-right: 0;
  width: 80%;
  cursor: pointer;
  font-size: 20px;
}
input[type=submit]:hover {
  background-color: #005BFF;
}
/* -->Form Page: Social Media */
#sc_container{
  width: 42%;
  position: absolute;
  right: 0;
  top: 32%;
  margin-right: 2%;
}
.button1{
  visibility: hidden;
  background-color: #4267B2E0; /* original: #4267B2 */
  color: white;
  border: none;
  border-radius: 4px;
  padding: 15px;
  margin: 10%;
  margin-bottom: 7%;
  width: 75%;
  cursor: pointer;
  text-align: center;
  font-size: 20px;
  transition-duration: 0.4s;
  display: block;
}
.button1:hover{
  background-color: #4267B2;
}

.button2{
  visibility: hidden;
  background-color: #2867B2E0;/* original: #2867B2 */
  color: white;
  border: none;
  border-radius: 4px;
  padding: 15px 36px;
  margin: 10%;
  margin-bottom: 7%;
  width: 75%;
  cursor: pointer;
  text-align: center;
  font-size: 20px;
  transition-duration: 0.4s;
  display: block;
}
.button2:hover{
  background-color: #2867B2;
}

.button3{
  visibility: hidden;
  background-color: #DB4A39E0;/* original: #db4a39 */
  color: white;
  border: none;
  border-radius: 4px;
  padding: 15px 36px;
  margin: 10%;
  margin-bottom: 7%;
  width: 75%;
  cursor: pointer;
  text-align: center;
  font-size: 20px;
  transition-duration: 0.4s;
  display: block;
}
.button3:hover{
  background-color: #db4a39;
}

#pg3_1{
  width: 100%;
  visibility: hidden;
}
#pg3_2{
  width: 100%;
  visibility: hidden;
}
#pg3_3{
  width: 100%;
  visibility: hidden;
}
div.con_imgs{
  visibility: hidden;
  background-color: white;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  margin-bottom: 25px;
  margin-left: 8px;
  padding: 5px;
  float: left;
  width: 24.99999%;
  text-align: center;
  font-size: 20px;
}
/*End of CSS for Join Us Page */

/* Mobile Device */
@media screen and (min-width: 300px) {
  .logo {
    position: absolute;
    overflow: hidden;
    top: 60px;
    left: 0px;
    width: 90px;
    margin-top: 10px;
  }
  .title {
    position: absolute;
    float: left;
    top: 100px;
    left: 115px;
    font-size: 13px;
    color: #6495ED;
    max-width: 100%;
    margin-top: 10px;
  }
  video {
    width: 90%;
    position: absolute;
    float: left;
    top: 200px;
    left: 20px;
  }
  .quote p {
    position: absolute;
    float: left;
    font-family: 'Montserrat';
    font-size: 16px;
    top: 450px;
    left: 0px;
    padding: 18px;
    margin-top: 40px;
  }
  .argument p {
    position: absolute;
    float: left;
    font-size: 16px;
    top: 550px;
    left: 0px;
    margin-top: 25px;
  }
  .join-us p {
    position: absolute;
    font-size: 16px;
    top: 600px;
    left: 50px;
    margin-top: 50px;
  }
}

/* Bigger than 600 pixel */
@media screen and (min-width: 600px) {
  .logo {
    position: absolute;
    overflow: hidden;
    top: 60px;
    left: 50px;
    width: 15%;
    margin-top: 15px;
  }
  .title {
    position: absolute;
    float: left;
    top: 100px;
    left: 215px;
    font-size: 25px;
    color: #6495ED;
    max-width: 100%;
    margin-top: 20px;
  }
  video {
    width: 70%;
    position: absolute;
    top: 200px;
    left: 120px;
  }
  .quote p {
    position: absolute;
    float: left;
    font-family: 'Montserrat';
    font-size: 18px;
    top: 450px;
    left: 0px;
    padding: 18px;
  }
  .argument p {
    position: absolute;
    float: left;
    font-size: 18px;
    top: 550px;
    left: 0px;
  }
  .join-us p {
    position: relative;
    font-size: 16px;
    top: 600px;
    left: 0px;
  }
}

/* Bigger than 1024 pixel */
@media screen and (min-width: 1024px) {
  .logo {
    position: absolute;
    overflow: hidden;
    top: 100px;
    left: 100px;
    width: 150px;
  }	
  .title {
    position: absolute;
    float: left;
    top: 130px;
    left: 280px;
    font-size: 40px;
    color: #6495ED;
    max-width: 100%;
  }
  video {
    width: 35%;
    height: auto;
    position: absolute;
    top: 300px;
    left: 50px;
  }	
  .quote p {
    position: absolute;
    float: left;
    font-family: 'Montserrat';
    font-size: 25px;
    top: 50px;
    left: 450px;
    padding: 18px;
  }
  .argument p {
    position: absolute;
    float: left;
    font-size: 20px;
    top: 200px;
    left: 450px;
    padding: 18px;	
  }	
  .join-us p {
    position: absolute;
    font-size: 23px;
    top: 300px;
    left: 450px;
    padding: 18px;
  }	
 }

@media screen and (min-width: 510px){
  #tab3 p{
    font-size: 16px;
  }
  #full_form{
    width: 50%;
  }
  #sc_container{
    top: 36%;
    visibility: visible;
  }
  .button1{
    visibility: visible;
  }
  .button2{
    visibility: visible;
  }
  .button3{
    visibility: visible;
  }
  .divline{
    visibility: visible;
  }
}

@media screen and (min-width: 768px){
  #photos img{
    width: 150px;
    height: 150px;
  }
  .information{
    font-size: 16px;
    margin: 2% 10%;
  }
  .tabcontent{
    font-size: 12px;
  }
  .tabcontent h4{
    font-size: 20px;
  }
  #tab3 img{
    height: 250px;
  }
  #tab3 p{
    font-size: 20px;
  }
  #full_form{
    width: 50%;
  }
  #firstname{
    margin-top: 15px;
    margin-bottom: 20px;
  }
  #lastname{
    margin-top: 15px;
    margin-bottom: 20px;
  }
  #emailid{
    margin-top: 15px;
    margin-bottom: 2px;
  }
  nav li{
    padding: 20px 16px;
  }
  nav a{
    font-size: 32px;
  }
  #header{
    margin-top: 75px;
  }
  .quote p{
    margin-top: 150px;
  }
  .argument p{
    margin-top: 125px;
  }
  .join-us p{
    margin-top: 135px;
  }
}

@media screen and (min-width: 992px){
  #photos img{
    width: 200px;
    height: 200px;
  }
  .information{
    font-size: 20px;
    margin: 2% 5%;
  }
  .tabcontent{
    font-size: 16px;
  }
  .tabcontent h4{
    font-size: 24px;
  }
  #tab3 img{
    height: 400px;
  }
  #pg3_1{
    visibility: visible;
  }
  #pg3_2{
    visibility: visible;
  }
  #pg3_3{
    visibility: visible;
  }
  div.con_imgs{
    visibility: visible;
    width: 31%;
  }
  nav li{
    padding: 20px 16px;
  }
  nav a{
    font-size: 40px;
  }
  #header{
    margin-top: 85px;
  }
}

/* Media that more than 1600 pixel */
@media screen and (min-width: 1600px){
  .logo {
    position: absolute;
    overflow: hidden;
    top: 48px;
    left: 45px;
    width: 180px;
  }
  .title {
    position: absolute;
    float: left;
    top: 95px;
    left: 310px;
    font-size: 55px;
    color: #6495ED;
    max-width: 100%;
  }
  video {
    width: 30%;
    position: absolute;
    top: 250px;
    left: 120px;
  }	
  .quote p {
    position: absolute;
    float: left;
    font-family: 'Montserrat';
    font-size: 24px;
    top: 300px;
    left: 720px;
    padding: 18px;
  }
  .argument p {
    position: absolute;
    float: left;
    font-size: 24px;
    top: 480px;
    left: 800px;
  }
  .join-us p {
    position: relative;
    font-size: 23px;
    top: 550px;
    left: 400px;
  }
  #sc_container{
    top: 30%;
  }
}
@media screen and (min-width: 1000px){
  #header{
    margin-top: 85px;
  }
  #sc_container{
    top: 29%;
  }
}

